--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
           <li><a href="/">Home</a></li>
           <% if current_user %>
           <li> <%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+            <% if current_user.admin %>
+            <li> <%= link_to 'Admin', destroy_user_session_path, method: :delete %></li>
+            <% end %>
           <% else %>
           <li><%= link_to 'Login', new_user_session_path %></li>
           <% end %>
