--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -5,6 +5,13 @@
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
 
+    <div class="form-group">
+        <%= f.label :avatar, class: 'col s2 control-label'  %>
+        <div class="col m6">
+            <%= f.file_field :avatar %>
+        </div>
+    </div>
+    <br>
     <div class="field">
       <%= f.label :email %><br />
       <%= f.email_field :email, autofocus: true %>
@@ -26,6 +33,11 @@
     <div class="field">
       <%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    </div>
+
+    <div class="field">
+      <%= f.check_box :admin %>
+      <%= f.label :admin %>
     </div>
     <br>
     <div class="actions">
