--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,11 @@
  *= require_self
  */
  @import "materialize/components/color";
- $primary-color: color("grey", "darken-2") !default;
- $secondary-color: color("indigo", "accent-4") !default;
+ $primary-color: color("grey", "darken-4") !default;
+ $secondary-color: color("grey", "darken-4") !default;
  @import 'materialize';
+
+.nav-wrapper {
+  margin-left: 3%;
+  margin-right: 3%;
+}
