--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
         <a href="/" class="brand-logo">Vintage Guitar Store</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="/">Home</a></li>
+          <li><%= link_to 'Guitars', products_path %></li>
           <% if current_user %>
           <li> <%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
             <% if current_user.admin %>
@@ -21,6 +22,7 @@
             <% end %>
           <% else %>
           <li><%= link_to 'Login', new_user_session_path %></li>
+
           <% end %>
         </ul>
       </div>
