--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,2 +1,9 @@
-<h1>it works</h1>
-<%= image_tag(current_user.avatar.url(:thumb)) %>
+<div class="parallax-container negative-margin">
+  <div class="parallax"><img src="/images/background.jpg"></div>
+</div>
+<div class="center-align section white">
+  <div class="row container">
+    <h1 class="thin">Clifford Guitars</h1>
+    <p class="grey-text text-darken-3 lighten-3">Clifford Guitars is your source of vintage guitars and amps.  Check out out select of insturments.</p>
+  </div>
+</div>
