add edit delete to product route

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,9 +1,8 @@
 <div class="parallax-container negative-margin">
   <div class="parallax"><img src="/images/background.jpg"></div>
 </div>
-<div class="center-align section white">
-  <div class="row container">
-    <h1 class="thin">Clifford Guitars</h1>
-    <p class="grey-text text-darken-3 lighten-3">Clifford Guitars is your source of vintage guitars and amps.  Check out out select of insturments.</p>
-  </div>
+<div class="section">
+  <h1 class="thin center-align">Clifford Guitars</h1>
+  <p class="grey-text text-darken-3 lighten-3 center-align" >Clifford Guitars is your source of vintage guitars and amps.  Check out out selection of insturments.</p>
+  <%= link_to "View Our Inventory", products_path, class: 'btn btn-large center-align' %>
 </div>
