--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>VintageGuitarStoreRails</title>
     <%= csrf_meta_tags %>
-
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -11,25 +11,52 @@
   <body>
     <nav>
       <div class="nav-wrapper">
-        <a href="/" class="brand-logo">Vintage Guitar Store</a>
+        <a href="/" class="brand-logo thin">Clifford Guitars</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="/">Home</a></li>
           <li><%= link_to 'Guitars', products_path %></li>
           <% if current_user %>
           <li> <%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
-            <% if current_user.admin %>
-            <li> <%= link_to 'Admin', destroy_user_session_path, method: :delete %></li>
-            <% end %>
+
           <% else %>
           <li><%= link_to 'Login', new_user_session_path %></li>
 
           <% end %>
+          <li> <%= link_to(destroy_user_session_path, method: :delete)  do %>
+            <i class="material-icons">shopping_cart</i>
+            <% end %>
+          </li>
         </ul>
       </div>
     </nav>
-    
-    <div class="container">
-      <%= yield %>
-    </div>
+    <main>
+      <div class="container">
+        <%= yield %>
+      </div>
+
+    </main>
+    <footer class="page-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Clifford Guitars</h5>
+            <p class="grey-text text-lighten-4">555 NW 5th St</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Contact</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">Email</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">555-555-0211</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright black">
+        <div class="container">
+        © 2017 Clifford Guitars
+        <a class="grey-text text-lighten-4 right" href="#!">Twitter</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
