--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -3,6 +3,8 @@
 </div>
 <div class="section">
   <h1 class="thin center-align">Clifford Guitars</h1>
-  <p class="grey-text text-darken-3 lighten-3 center-align" >Clifford Guitars is your source of vintage guitars and amps.  Check out out selection of insturments.</p>
-  <%= link_to "View Our Inventory", products_path, class: 'btn btn-large center-align' %>
+  <p class="grey-text text-darken-3 lighten-3 center-align" >Clifford Guitars is your source of vintage guitars and amps.  Check out our selection of insturments.</p>
+  <div class="section center-align">
+    <%= link_to "View Our Inventory", products_path, class: 'btn btn-large' %>
+  </div>
 </div>
