finish integration tests

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -45,6 +45,7 @@
       <%= f.check_box :admin %>
       <%= f.label :admin %>
     </div>
+    <h6 class="red-text">Note: this check box gives the user admin priveleges.</h6>
     <br>
     <div class="actions">
       <%= f.submit "Sign up", class: 'btn' %>
