--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,6 +1,7 @@
 
-<div class="section">
+<div class="section center-align">
   <h1 class="center-align thin">Your Cart</h1>
+  <%= image_tag(current_user.avatar.url(:thumb)) %>
 </div>
 
 
